First click is never a Mine, expand and more lives
* If there are no mines around the clicked cell it's expand
* From now First click is never a Mine 
* added lives function includes images
* some styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 
 <body onload="onInit()">
     <h1>Mine💣Sweeper</h1>
-
+    <p class="smiley"><img class="smiley-img" src="img/happy.png"></p>
+    
+    <p class="heart1"><img class="heart1-img" src="img/red-heart.png"></p>
+    <p class="heart2"><img class="heart2-img" src="img/red-heart.png"></p>
+    <p class="heart3"><img class="heart3-img" src="img/red-heart.png"></p>
+    
     <table class="board-container">
         <tbody class="board"></tbody>
     </table>
