UNDO,  copy board system and more little features

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </table>
 
     <p class="flag"><span class="flag-count" style="color:#d21404;font-size: 12px;">0</span>🚩</p>
+    <button class="undo-btn" onclick="makeUndo()">UNDO</button>
     <p class="timer" style="font-size: 14px; color: #36454F;">Time: 0</p>
 
     <div class="level-buttons">
