Best Scores update
*Best Scores Feature
*Some style changes
*Bug fixes

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     <div class="modal">
         <span></span>
     </div>
+    <div class="score-container">
+        <h3>Your Best Scores</h3>
+        <div class="best-score easy-score">Easy: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
+        <div class="best-score medium-score">Medium: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
+        <div class="best-score hard-score">Hard: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
+    </div>
 
     <table class="board-container">
         <tbody class="board"></tbody>
