--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
     </div>
     <div class="score-container">
         <h3>Your Best Scores</h3>
-        <div class="best-score easy-score">Easy: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
-        <div class="best-score medium-score">Medium: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
-        <div class="best-score hard-score">Hard: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
+    Unfortunately only works on Live Server..
     </div>
 
     <table class="board-container">
