--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="score-container">
         <h3>Your Best Scores</h3>
-    Unfortunately only works on Live Server..
+     only works on Live Server..
     </div>
 
     <table class="board-container">
