--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
     </div>
     <div class="score-container">
         <h3>Your Best Scores</h3>
-     only works on Live Server..
+        <div class="best-score easy-score">Easy: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
+        <div class="best-score medium-score">Medium: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
+        <div class="best-score hard-score">Hard: <br> <span class="best-score-timer">000</span>🕒<br><br></div>
     </div>
 
     <table class="board-container">
